# DeDucktion

./: .gitignore  README.md  flake.nix  index.css  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
engine/src/formula/: mod.rs
engine/src/formula/parser/: lexer.rs  mod.rs  settings.rs
engine/src/formula/prop/: lexer.rs  mod.rs  parser.rs
engine/wasm-bindings/: Cargo.toml
engine/wasm-bindings/src/: lib.rs
src/: index.ts  main.ts
src/export/: convert.ts
src/logic/: deduction-rules.ts  syntax.ts
src/ui/: state.ts  ui.ts  zoom.ts
