[package]
name = "deducktion-engine"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "wasm-bindings" ]

[workspace.dependencies]
wasm-bindgen = "0.2.114"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"

[dependencies]
serde = { workspace = true }

[profile.release]
opt-level = "s"
